Fixed underline of links, that was broken on mobile because of wrong display CSS.

--- a/src/assets/sass/parts/_buttons.scss
+++ b/src/assets/sass/parts/_buttons.scss
@@ -23,7 +23,7 @@
 }
 
 .e-link {
-    display: inline-block;
+    display: inline;
     color: #455A64;
     text-decoration: none;
     box-shadow: 0 1px #03A9F4;
