--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -347,7 +347,7 @@ $other-project-img-size: 6rem;
     font-weight: 300;
     font-style: italic;
     line-height: 1.2;
-    color: #78909C;
+    color: #78879b;
     margin-top: 1rem;
 }
 
